--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,18 @@
   <noscript>
     <h3>Esta app necesita JavaScript para funcionar</h3>
   </noscript>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('/service-worker.js')
+          .then(registration => {
+            console.info('SW registrado.')
+          })
+          .catch(error => {
+            console.error('SW error', error)
+          })
+      })
+    }
+  </script>
 </body>
 </html>
